--- a/package.json
+++ b/package.json
@@ -7,20 +7,25 @@
   "dependencies": {
     "bootstrap-sass": "^3.3.7",
     "file-loader": "^1.1.6",
+    "font-awesome": "^4.7.0",
     "node-sass": "^4.7.2",
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
     "react-bootstrap": "^0.31.5",
     "react-css-modules": "^4.7.1",
     "react-dom": "^16.2.0",
+    "react-redux": "^5.0.7",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
-    "react-transition-group": "^1"
+    "react-router-redux": "^4.0.8",
+    "react-thunk": "^1.0.0",
+    "react-transition-group": "^1",
+    "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.2.3",
     "babel-core": "^6.26.0",
-    "babel-eslint": "^7.2.3",
     "babel-loader": "^7.1.2",
     "babel-plugin-dynamic-import-webpack": "^1.0.2",
     "babel-plugin-lodash": "^3.3.2",
@@ -40,11 +45,6 @@
     "compression-webpack-plugin": "^1.1.2",
     "copy-webpack-plugin": "^4.3.0",
     "css-loader": "^0.28.7",
-    "eslint": "^3.19.0",
-    "eslint-loader": "^1.9.0",
-    "eslint-plugin-babel": "^4.1.2",
-    "eslint-plugin-flowtype": "^2.40.1",
-    "eslint-plugin-react": "^7.5.1",
     "extract-text-webpack-plugin": "^3.0.2",
     "html-webpack-inline-source-plugin": "0.0.9",
     "html-webpack-plugin": "^2.30.1",
